--- a/website/assets/scss/global.scss
+++ b/website/assets/scss/global.scss
@@ -8,14 +8,13 @@ $THEME-NIGHT-BACKGROUND-COLOR: #111;
 $THEME-NIGHT-TEXT-COLOR: #fff;
 
 
-html, body, #__next, .layout {
+html, body, #__next {
   height: 100%;
   width: 100%;
 }
 
 body {
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
-    'Arial', sans-serif;
+  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   margin: 0 auto;
 }
 
