Update website, remove about and test pages, config for header

--- a/website/assets/scss/login.scss
+++ b/website/assets/scss/login.scss
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   .paperContainer {
-    margin-top: 100px;
+    margin: 100px 0;
     width: 90%;
-    max-width: 500px;
+    max-width:300px;
     .paperStyle {
       min-height: 400px;
     }
