--- a/website/assets/scss/login.scss
+++ b/website/assets/scss/login.scss
@@ -2,21 +2,15 @@
   display: flex;
   justify-content: center;
   .paperContainer {
-    margin: 100px 0;
-    width: 90%;
-    max-width:300px;
-    .paperStyle {
-      min-height: 400px;
-    }
+    margin: 50px 0;
     .facebookButton {
+      margin: 30px 0;
       border: 0 solid;
-      border-radius: 15px;
-      height: 30px;
-      width: 180px;
-      font-weight: 900;
-      color: #fff;
-      background-color: #2e76f2;
-      cursor: pointer;
+      width: 100%;
+      background-color: transparent;
     }
+  }
+  .MuiButton-root {
+    text-transform: none;
   }
 }
