--- a/server/user/views/forgetPasswordBody.ejs
+++ b/server/user/views/forgetPasswordBody.ejs
@@ -4,19 +4,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iBlog 忘記密碼 | iBlog Forget Password</title>
+    <title>iBlog 重置密碼驗證碼 | iBlog Reset Password Verify Code</title>
   </head>
   <body style="margin: 0; background-color: #eee;">
     <div style="margin-top: 20px; display: flex; justify-content: center;">
-      <div style="max-width: 500px; background-color: #fff;">
+      <div style="width: 90%; max-width: 500px; background-color: #fff;">
         <div style="background-color: blue; color: #fff; padding: 10px 20px; font-size: 20px; font-weight: bolder;">iBlog</div>
         <div style="padding: 20px 40px;">
           <p style="font-size: 18px; font-weight: 900;">Dear <%= username %>:</p>
-          <p>Please click the following link to reset the password. Thank you!</p>
-          <p>Link: 
-            <a href="https://lipohong.xyz/auth/forgetPassword?verifyCode=<%= verifyCode %>" target="_blank">
-              https://lipohong.xyz/auth/forgetPassword?verifyCode=<%= verifyCode %>
-            </a>
+          <p>Your password reset verify code is as follow.</p>
+          <p style="font-size: 20px; color: blue;"><%= verifyCode %></p>
+          <p>Reset password page link: 
+            <a href="<%= resetPasswordPage %>" target="_blank"><%= resetPasswordPage %></a>
           </p>
           <div style="margin-top: 50px;">
             <p>Need help? Please contact: <a href="mailto:lipohong@hotmail.com">lipohong@hotmail.com</a></p>
@@ -25,11 +24,10 @@
         <hr style="border: 0px solid #eee; border-width: 10px;" />
         <div style="padding: 20px 40px;">
           <p style="font-size: 18px; font-weight: 900;"><%= username %> 先生/女士:</p>
-          <p>請點擊下面的鏈接，以重置賬戶密碼。</p>
-          <p>鏈接: 
-						<a href="https://lipohong.xyz/auth/forgetPassword?verifyCode=<%= verifyCode %>" target="_blank">
-							https://lipohong.xyz/auth/forgetPassword?verifyCode=<%= verifyCode %>
-						</a>
+          <p>以下為本次重置賬號密碼的驗證碼。</p>
+          <p style="font-size: 20px; color: blue;"><%= verifyCode %></p>
+          <p>重置密碼頁面鏈接: 
+						<a href="<%= resetPasswordPage %>" target="_blank"><%= resetPasswordPage %></a>
 					</p>
           <div style="margin-top: 50px;">
             <p>遇到問題? 可以聯係: <a href="mailto:lipohong@hotmail.com">lipohong@hotmail.com</a></p>
