Update website, finished register page layout

--- a/website/assets/scss/register.scss
+++ b/website/assets/scss/register.scss
@@ -3,6 +3,10 @@
   justify-content: center;
   .paperContainer {
     margin: 50px 0;
+    .pageMeassage {
+      font-size: 20px;
+      text-align: center;
+    }
     .facebookButton {
       margin: 30px 0;
       border: 0 solid;
