Update website, minor change for profile page

--- a/website/assets/scss/profile.scss
+++ b/website/assets/scss/profile.scss
@@ -4,6 +4,9 @@
     .paperContainer {
       margin: 50px 0
     }
+    .passwordContainer {
+      margin: 50px
+    }
     .MuiButton-root {
       text-transform: none;
     }
