Update website, support update username and description

--- a/website/assets/scss/profile.scss
+++ b/website/assets/scss/profile.scss
@@ -11,3 +11,11 @@
     text-transform: none;
   }
 }
+.dialogContainer {
+  .MuiDialogContent-root {
+    overflow-y: hidden;
+  }
+  .MuiButton-root {
+    text-transform: none;
+  }
+}
