--- a/website/assets/scss/blog.scss
+++ b/website/assets/scss/blog.scss
@@ -1,3 +1,11 @@
 .blog {
-  margin: 10px auto;
+  margin: 50px auto;
+  .container {
+    .ql-container {
+      min-height: 400px;
+    }
+  }
+  .MuiButton-root {
+    text-transform: none;
+  }
 }
