Update blog view page, finished like and collection function

--- a/website/assets/scss/blog.scss
+++ b/website/assets/scss/blog.scss
@@ -21,3 +21,13 @@
     text-transform: none;
   }
 }
+.dialogContainer {
+  .collectionName {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .collectionInfo {
+    font-size: 18px;
+    color: #999;
+  }
+}
