--- a/web/assets/style/scss/index.scss
+++ b/web/assets/style/scss/index.scss
@@ -12,6 +12,9 @@ body {
     .title-2 {
         font-size: large;;
     }
+    .v-application--wrap {
+        background-color: #eee;
+    }
 }
 
 @import './home.scss';
