--- a/web/assets/style/scss/index.scss
+++ b/web/assets/style/scss/index.scss
@@ -12,9 +12,9 @@ body {
     .title-2 {
         font-size: large;;
     }
-    .v-application--wrap {
-        background-color: #eee;
-    }
+    // .v-application--wrap {
+    //     background-color: #eee;
+    // }
 }
 
 @import './home.scss';
