Update web, user blog list and profile page test pass

--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -41,4 +41,12 @@
             color: #999
         }
     }
+    .viewUserBlogsContainer {
+        .blogContainer {
+            cursor: pointer;
+            &:hover {
+                background: #aaa;
+            }
+        }
+    }
 }
