--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -1,3 +1,8 @@
 .home {
-    
+    .blogContainer {
+        cursor: pointer;
+        &:hover {
+            background: #aaa;
+        }
+    }
 }
