--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -1,8 +1,23 @@
 .home {
-    .blogContainer {
-        cursor: pointer;
-        &:hover {
-            background: #aaa;
+    .bannerContainer {
+        background: #ccc;
+        color: black
+    }
+    .top5BlogPostersContainer {
+        display: grid;
+        justify-items: center;
+        grid-template-columns:
+        repeat(auto-fill, minmax(170px, 1fr));
+    }
+    .top5BlogsContainer {
+        display: grid;
+        grid-template-columns:
+        repeat(auto-fill, minmax(320px, 1fr));
+        .blogContainer {
+            cursor: pointer;
+            &:hover {
+                background: #aaa;
+            }
         }
     }
 }
