--- a/web/assets/style/scss/home.scss
+++ b/web/assets/style/scss/home.scss
@@ -15,6 +15,10 @@
         repeat(auto-fill, minmax(320px, 1fr));
         .blogContainer {
             cursor: pointer;
+            border: 1px solid #eee;
+            border-radius: 10px;
+            margin: 5px;
+            box-shadow: 2px 2px 2px #eee;
             &:hover {
                 background: #aaa;
             }
