--- a/web/assets/style/scss/index.scss
+++ b/web/assets/style/scss/index.scss
@@ -15,13 +15,52 @@ body {
     .v-tab {
         text-transform: none;
     }
-    .blogContainer {
-        cursor: pointer;
-        &:hover {
-            background: #aaa;
+    .blogListContainer {
+        column-gap: 10px;
+        .blogContainer {
+            cursor: pointer;
+            display: block;
+            width: 100%;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 2px 2px 5px #eee;
+            break-inside: avoid-column;
+            page-break-inside: avoid;
+            &:hover {
+                box-shadow: 5px 5px 5px #aaa;
+            }
+        }
+    }
+    
+    /* Masonry on large screens */
+    @media only screen and (min-width: 1024px) {
+        .blogListContainer {
+            -moz-column-count: 4;
+            -webkit-column-count: 4;
+            column-count: 4;
+        }
+    }
+
+    /* Masonry on medium-sized screens */
+    @media only screen and (max-width: 1023px) and (min-width: 768px) {
+        .blogListContainer {
+            -moz-column-count: 3;
+            -webkit-column-count: 3;
+            column-count: 3;
+        }
+    }
+
+    /* Masonry on small screens */
+    @media only screen and (max-width: 767px) and (min-width: 540px) {
+        .blogListContainer {
+            -moz-column-count: 2;
+            -webkit-column-count: 2;
+            column-count: 2;
         }
     }
 }
+
 
 @import './home.scss';
 @import './auth.scss';
