Update web, update UI for home page and user blogs list page, set filter for image and likes from previewing

--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -34,6 +34,7 @@
     .viewUserBlogsContainer {
         .blogContainer {
             cursor: pointer;
+            border-radius: 10px;
             &:hover {
                 background: #aaa;
             }
