Update web, change home layout and layout style

--- a/web/assets/style/scss/layout.scss
+++ b/web/assets/style/scss/layout.scss
@@ -1,2 +1,13 @@
 .layout {
+    .nuxt {
+        min-height: 100vh;
+    }
+    .homepageFooter {
+        margin-top: 5rem !important;
+        height: 10rem !important;
+        font-size: 1.2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
