--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -14,6 +14,19 @@
                 min-width: 200px;
             }
         }
+        .coverMessage {
+            color: red;
+            text-align: center;
+            font-size: 0.8rem;
+            transition-duration: 0.3s;
+            opacity: 0;
+            transform: translateY(-12px);
+            &.showCoverMessage {
+                padding: 1rem;
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
     }
     .viewBlogContainer {
         .coverContainer {
@@ -25,10 +38,11 @@
         }
         .blogTitle {
             font-size: 40px;
-            font-family: medium-content-title-font, Georgia, Cambria, "Times New Roman", Times, serif;
+            font-family: medium-content-title-font, Georgia, Cambria,
+                "Times New Roman", Times, serif;
         }
         .updatedDate {
-            color: #999
+            color: #999;
         }
     }
     .viewUserBlogsContainer {
