--- a/web/assets/style/scss/layout.scss
+++ b/web/assets/style/scss/layout.scss
@@ -2,12 +2,12 @@
     .nuxt {
         min-height: 100vh;
     }
-    .homepageFooter {
-        margin-top: 5rem !important;
-        height: 10rem !important;
-        font-size: 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+}
+.footer {
+    margin-top: 5rem !important;
+    height: 10rem !important;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
