Update web, blog viewing page updating in progress

--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -31,8 +31,9 @@
         }
     }
     .viewBlogContainer {
+        margin: 0 auto;
+        padding: 1rem;
         width: 100%;
-        margin: 1rem;
         .coverContainer {
             text-align: center;
             .cover {
