--- a/web/assets/style/scss/layout.scss
+++ b/web/assets/style/scss/layout.scss
@@ -4,10 +4,9 @@
     }
 }
 .footer {
-    margin-top: 5rem !important;
-    height: 10rem !important;
+    margin: 5rem 1rem 1rem 0;
     font-size: 1rem;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
