--- a/web/assets/style/scss/index.scss
+++ b/web/assets/style/scss/index.scss
@@ -19,6 +19,10 @@ body {
         text-transform: none;
     }
 }
+html,
+body {
+    height: 100%;
+}
 
 @import "./home.scss";
 @import "./auth.scss";
