--- a/web/assets/style/scss/sideBar.scss
+++ b/web/assets/style/scss/sideBar.scss
@@ -1,41 +1,62 @@
-@mixin tab-selected {
-    &::after {
-        position: absolute;
-        display: block;
-        border: 1px solid white;
-        content: "";
-        width: 100%;
-        height: 100%;
-        margin: 1rem 0 0 -1rem;
-        z-index: -1000;
-    }
-}
 .sideBar {
     position: fixed;
-    flex-shrink: 0;
     height: 100%;
     width: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     transition-duration: 0.2s;
     z-index: 1000;
+    @mixin tab-selected {
+        &::after {
+            position: absolute;
+            display: block;
+            border: 1px solid white;
+            content: "";
+            width: 100%;
+            height: 100%;
+            margin: 1rem 0 0 -1rem;
+            z-index: 0;
+        }
+    }
+    @mixin button-hover-focus {
+        &:focus {
+            background-color: white;
+        }
+        &:hover {
+            background-color: darken($color: white, $amount: 10);
+        }
+        &:active {
+            background-color: darken($color: white, $amount: 20);
+        }
+    }
     .sideBarContainer {
         height: 100%;
+        overflow-y: auto;
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
         button {
             margin: 0.5rem;
             padding: 0.5rem;
             background-color: white;
             outline: 0;
-            &:hover {
-                background-color: darken($color: white, $amount: 10);
-            }
-            &:focus {
-                background-color: white;
-            }
+            transition-duration: 0.2s;
+            @include button-hover-focus;
         }
         .profileContainer {
             margin-top: 5rem;
             text-align: center;
             color: white;
+            .authorMessagesContainer {
+                width: 100%;
+                padding: 1rem;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                align-content: center;
+            }
         }
         nav {
             margin-top: 5rem;
@@ -49,7 +70,6 @@
                     list-style-type: none;
                     padding: 1rem 1.5rem;
                     margin-bottom: 1.5rem;
-                    z-index: 100;
                     background-color: white;
                     .v-icon {
                         margin-right: 2rem;
@@ -65,6 +85,17 @@
                     }
                 }
             }
+            .sideBarButtonGroup {
+                margin: 5rem 0;
+                button {
+                    margin-left: 1.8rem;
+                    padding: 1.2rem;
+                    background-color: white;
+                    outline: 0;
+                    transition-duration: 0.2s;
+                    @include button-hover-focus;
+                }
+            }
         }
     }
     .sideBarMenuButton {
@@ -76,7 +107,7 @@
         transition-duration: 0.2s;
         opacity: 0.9;
         &.openSideBarMenu {
-            margin-left: 17rem;
+            margin-left: 14rem;
         }
     }
 }
@@ -91,6 +122,16 @@
 @media only screen and (max-width: $break-point-xl - 1px) and (min-width: $break-point-lg) {
     .sideBar {
         width: 18rem;
+        .sideBarContainer {
+            nav {
+                .sideBarButtonGroup {
+                    button {
+                        margin-left: 1rem;
+                        padding: 1rem;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -103,6 +144,16 @@
         .sideBarMenuButton {
             display: inline-block;
         }
+        .sideBarContainer {
+            nav {
+                .sideBarButtonGroup {
+                    button {
+                        margin-left: 1rem;
+                        padding: 0.8rem;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -114,6 +165,16 @@
         }
         .sideBarMenuButton {
             display: inline-block;
+        }
+        .sideBarContainer {
+            nav {
+                .sideBarButtonGroup {
+                    button {
+                        margin-left: 1rem;
+                        padding: 0.8rem;
+                    }
+                }
+            }
         }
     }
 }
