--- a/web/assets/style/scss/blog.scss
+++ b/web/assets/style/scss/blog.scss
@@ -72,9 +72,12 @@
             input {
                 width: 100%;
                 max-width: 30rem;
-                border: 2px solid;
+                border: 1px solid #aaa;
                 padding: 0.5rem;
                 outline: none;
+                &:focus {
+                    outline: 2px solid cyan;
+                }
             }
         }
         .blogContainer {
@@ -83,6 +86,12 @@
             &:hover {
                 background: #aaa;
             }
+        }
+    }
+    .blogPreviewContainer {
+        img {
+            display: block;
+            width: 100%;
         }
     }
     /* x large screens */
