--- a/web/assets/style/scss/sideBar.scss
+++ b/web/assets/style/scss/sideBar.scss
@@ -46,6 +46,7 @@
             @include button-hover-focus;
         }
         .avatarButton {
+            cursor: pointer;
             background-color: white;
             float: right;
             top: 0.5rem;
@@ -69,16 +70,19 @@
             margin-top: 5rem;
             text-align: center;
             color: white;
-            .authorMessagesContainer {
+            p {
+                font-size: 1.5rem;
+            }
+            .infosContainer {
                 width: 100%;
                 padding: 1rem;
                 display: flex;
-                justify-content: flex-end;
+                justify-content: center;
                 align-items: center;
                 align-content: center;
-            }
-            span {
-                font-size: 3rem;
+                span {
+                    margin-right: 1rem;
+                }
             }
         }
         nav {
